Added developer id node

--- a/com.example:example.yml
+++ b/com.example:example.yml
@@ -4,6 +4,7 @@ project:
   description: <description>
 developers:
   - name: <developer name>
+    id: <developer id>
 licenses:
   - name: The Apache Software License, Version 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.txt
